<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/a_About_Text_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_About_Text_Title"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/a_About_Text_Title"
        />
    
    <TextView 
        android:id="@+id/a_About_Text_Version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_About_Text_Version"
        android:layout_gravity="center_horizontal"
        />
    
    <TextView 
        android:id="@+id/a_About_Text_Author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_About_Text_Author"
        android:layout_gravity="center_horizontal"
        />
    
    <TextView 
        android:id="@+id/a_About_Text_Describle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_About_Text_Describle"
        android:layout_gravity="center_horizontal"
        />
    
    <TextView 
        android:id="@+id/a_About_Text_Change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_About_Text_Change"
        android:layout_gravity="center_horizontal"
        />
    
    <Button 
        android:id="@+id/about_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/back"/>
	
</LinearLayout>
